--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ footer {
 
         <div class="student-card">
             <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Student">
-            <h3>Rahul Kumar</h3>
+            <h3>Rellu Bharath Sai</h3>
             <p>Web Developer</p>
         </div>
 
@@ -253,7 +253,7 @@ footer {
 
         <div class="student-card">
             <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d" alt="Student">
-            <h3>Arjun Sai</h3>
+            <h3>Pawan Kalyan</h3>
             <p>Data Analyst</p>
         </div>
 
@@ -280,3 +280,4 @@ footer {
 </body>
 
 </html>
+
