--- a/index.html
+++ b/index.html
@@ -233,38 +233,38 @@ footer {
             </div>
         </div>
     </section>
-
- <!-- Students Section -->
+<!-- Students Section -->
 <section class="students" id="students">
     <h2>Our Aditya Students</h2>
     <div class="student-gallery">
 
         <div class="student-card">
-            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Student">
+            <img src="/attachments/BtgyFDYxFebwJinZq5bt5.jpeg" alt="Student">
             <h3>Rellu Bharath Sai</h3>
             <p>Web Developer</p>
         </div>
 
         <div class="student-card">
-            <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Student">
+            <img src="/attachments/jhFE5GVHmodDN6B3kTvAX.jpeg" alt="Student">
             <h3>Sneha Reddy</h3>
             <p>Python Programmer</p>
         </div>
 
         <div class="student-card">
-            <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d" alt="Student">
+            <img src="/attachments/mkhZmc78dHFmKKMpfLfZf.jpeg" alt="Student">
             <h3>Pawan Kalyan</h3>
             <p>Data Analyst</p>
         </div>
 
         <div class="student-card">
-            <img src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c" alt="Student">
+            <img src="/attachments/sxeXiLGAweR93w5YSkCEK.jpeg" alt="Student">
             <h3>Priya Sharma</h3>
             <p>Frontend Developer</p>
         </div>
 
     </div>
 </section>
+
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2>Contact Us</h2>
@@ -280,4 +280,5 @@ footer {
 </body>
 
 </html>
+
 
