--- a/index.html
+++ b/index.html
@@ -239,31 +239,32 @@ footer {
     <div class="student-gallery">
 
         <div class="student-card">
-            <img src="/attachments/BtgyFDYxFebwJinZq5bt5.jpeg" alt="Student">
+            <img src="/attachments/BtgyFDYxFebwJinZq5bt5.jpeg" alt="Rellu Bharath Sai">
             <h3>Rellu Bharath Sai</h3>
             <p>Web Developer</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/jhFE5GVHmodDN6B3kTvAX.jpeg" alt="Student">
+            <img src="/attachments/jhFE5GVHmodDN6B3kTvAX.jpeg" alt="Sneha Reddy">
             <h3>Sneha Reddy</h3>
             <p>Python Programmer</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/mkhZmc78dHFmKKMpfLfZf.jpeg" alt="Student">
+            <img src="/attachments/mkhZmc78dHFmKKMpfLfZf.jpeg" alt="Pawan Kalyan">
             <h3>Pawan Kalyan</h3>
             <p>Data Analyst</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/sxeXiLGAweR93w5YSkCEK.jpeg" alt="Student">
+            <img src="/attachments/sxeXiLGAweR93w5YSkCEK.jpeg" alt="Priya Sharma">
             <h3>Priya Sharma</h3>
             <p>Frontend Developer</p>
         </div>
 
     </div>
 </section>
+
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
@@ -280,5 +281,6 @@ footer {
 </body>
 
 </html>
+
 
 
