--- a/index.html
+++ b/index.html
@@ -239,25 +239,25 @@ footer {
     <div class="student-gallery">
 
         <div class="student-card">
-            <img src="/attachments/BtgyFDYxFebwJinZq5bt5.jpeg" alt="Rellu Bharath Sai">
-            <h3>Rellu Bharath Sai</h3>
+            <img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde" alt="Student">
+            <h3>Rahul Kumar</h3>
             <p>Web Developer</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/jhFE5GVHmodDN6B3kTvAX.jpeg" alt="Sneha Reddy">
+            <img src="https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e" alt="Student">
             <h3>Sneha Reddy</h3>
             <p>Python Programmer</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/mkhZmc78dHFmKKMpfLfZf.jpeg" alt="Pawan Kalyan">
-            <h3>Pawan Kalyan</h3>
+            <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d" alt="Student">
+            <h3>Arjun Sai</h3>
             <p>Data Analyst</p>
         </div>
 
         <div class="student-card">
-            <img src="/attachments/sxeXiLGAweR93w5YSkCEK.jpeg" alt="Priya Sharma">
+            <img src="https://images.unsplash.com/photo-1547425260-76bcadfb4f2c" alt="Student">
             <h3>Priya Sharma</h3>
             <p>Frontend Developer</p>
         </div>
@@ -281,6 +281,7 @@ footer {
 </body>
 
 </html>
+
 
 
 
